added readMore readLess functionality

--- a/public/css/article-list.css
+++ b/public/css/article-list.css
@@ -1,5 +1,5 @@
 .article-container{
-    max-width: 600px;
+    max-width: 60%;
     border: 1px solid #444;
     /* padding: 10px; */
     margin-top: 10px;
@@ -15,5 +15,8 @@ margin-bottom: 8px;
 }
 .article-description{
     color: #333;
+    font-size: 20px;
+    line-height: 120%;
     margin-bottom: 20px;
+    /* letter-spacing: 2px; */
 }
