read more functionality

--- a/views/article/article-list.ejs
+++ b/views/article/article-list.ejs
@@ -23,7 +23,7 @@
                                 <p class="article-description">
                                     <%= article.description.substr(0,200)+'...' %>
                                 </p>
-                                <button class="read-more btn blur-effect" data-article="<%=article.description%> "
+                                <button class="read-more btn" data-article="<%=article.description%> "
                                     style="display: block; margin: auto;" value="<%= article.description  %> ">Read More</button>
                                 <% } else {%>
 
